5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1753_1523.log
== TEST (2019-05-16 18:12:29) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
	elif(x<200)
		print(qtd)
else:
print(0)
-- ERROR:
File "XXXX", line 7
    elif(x<200)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:12:35) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
	elif(x<200)
	print(qtd)
else:
print(0)
-- ERROR:
File "XXXX", line 7
    elif(x<200)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:12:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
		elif(x<200)
	print(qtd)
else:
print(0)
-- ERROR:
File "XXXX", line 7
    elif(x<200)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:12:56) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
		elif(x<200):
	print(qtd)
else:
print(0)
-- ERROR:
File "XXXX", line 7
    elif(x<200):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:13:03) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
	elif(x<200):
	print(qtd)
else:
print(0)
-- ERROR:
File "XXXX", line 7
    elif(x<200):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:13:14) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
	elif(x<200):
	print(qtd)
else:
print(0)
-- ERROR:
File "XXXX", line 7
    elif(x<200):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:13:18) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:13:20) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:13:31) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:13:41) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.23658
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:13:56) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:14:03) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.220499
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:14:04) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:15:31) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:15:36) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.198416
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
100
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:15:37) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:17:02) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
y=200-x
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:17:10) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
y=200-x
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:17:12) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
y=200-x
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.251897
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
100
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:17:12) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
y=200-x
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:17:35) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:17:44) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.234248
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:17:47) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:18:21) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.218588
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:38) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.176301
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:19:39) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:40) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.199855
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:41) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.212054
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:42) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.513073
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1753/1523/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:43) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.444564
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
50
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:43) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.844138
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:43) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.762394
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
50
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:43) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
1.39849
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:43) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
1.21868
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
50
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:45) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
1.05226
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
1.22076
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
1.13498
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
1.38918
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1753/1523/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
1.22828
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.992593
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
50
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:48) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.859764
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1753/1523/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:48) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.601421
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:48) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.730061
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:48) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.770837
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1753/1523/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:48) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.659819
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1753/1523/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:52) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.209522
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:53) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.186807
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:54) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.227251
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:54) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.268323
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:55) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.372417
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:55) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtd+qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(qtd)
else:
	print(0)
-- EXECUTION TIME:
0.50072
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
50
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
50
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:26:14) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
s=qtdc-qtdd
x=qtd-s
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:26:23) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
s=qtdc-qtdd
x=qtd-s
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.191173
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:26:24) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
s=qtdc-qtdd
x=qtd-s
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:26:49) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
s=qtdc-qtdd
x=qtd-s
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 10
    print(0)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:31:31) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- OUTPUT:
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:37) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.242967
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
18
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:47) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.572337
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
18
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:47) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.806808
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
18
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:47) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.846126
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
50
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:48) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.978731
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:31:48) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
1.12648
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
50
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:00) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- OUTPUT:
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:04) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.199551
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
100
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:45) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
if (x==200):
	print(0)
elif(x<200):
	print(121-x)
else:
	print(0)
-- OUTPUT:
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:32:52) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
if (x==200):
	print(0)
elif(x<200):
	print(121-x)
else:
	print(0)
-- EXECUTION TIME:
0.273831
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
21
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:32:58) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
if (x==200):
	print(0)
elif(x<200):
	print(123-x)
else:
	print(0)
-- OUTPUT:
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:33:04) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
if (x==200):
	print(0)
elif(x<200):
	print(123-x)
else:
	print(0)
-- EXECUTION TIME:
0.219963
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
23
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:35:50) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
while(x)
	if (x==200):
	print(0)
	elif(x<200):
	print(x)
	else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:35:53) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
while(x)
	if (x==200):
	print(0)
	elif(x<200):
	print(x)
	else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:35:54) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
while(x)
	if (x==200):
	print(0)
	elif(x<200):
	print(x)
	else:
	print(0)
-- EXECUTION TIME:
0.26587
-- ERROR:
  File "/home/codebench/codes/1753/1523/main.py", line 4
    while(x)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:35:56) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
while(x)
	if (x==200):
	print(0)
	elif(x<200):
	print(x)
	else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:35:58) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
while(x)
	if (x==200):
	print(0)
	elif(x<200):
	print(x)
	else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:35:58) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
while(x)
	if (x==200):
	print(0)
	elif(x<200):
	print(x)
	else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:35:59) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
while(x)
	if (x==200):
	print(0)
	elif(x<200):
	print(x)
	else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:35:59) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
while(x)
	if (x==200):
	print(0)
	elif(x<200):
	print(x)
	else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:36:20) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:36:48) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:36:53) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
0.3071
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
23
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:37:37) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:42) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
0.351274
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:43) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
0.465657
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:45) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
1.02434
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:45) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
0.917273
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
1.2823
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
23
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
1.23193
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
23
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
1.3385
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1753/1523/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
1.00543
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
23
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:46) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
0.764151
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
23
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
23
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:37:47) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
0.605177
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
23
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
23
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:40:06) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:40:13) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
0.218524
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
23
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:40:16) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:41:43) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:41:43) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- EXECUTION TIME:
0.200176
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
Quantidade inicial de baloes: Quantidade C de novos baloes: Quantidade D de baloes destruidos: 0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
Quantidade inicial de baloes: Quantidade C de novos baloes: Quantidade D de baloes destruidos: 23
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:41:44) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:41:44) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:41:52) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
y=123-x
if (x==200):
	print(0)
elif(x<200):
	print(y)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:43:03) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- ERROR:
File "XXXX", line 4
    while(x)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:43:09) 
-- CODE:
qtd=int(input("Quantidade inicial de baloes: "))
qtdc=int(input("Quantidade C de novos baloes: "))
qtdd=int(input("Quantidade D de baloes destruidos: "))
x=qtdc-qtdd+qtd
if (x==200):
	print(0)
elif(x<200):
	print(x)
else:
	print(0)
-- EXECUTION TIME:
0.150209
-- TEST CASE 1:
---- input:
450
60
42
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
200
199
199
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
50
500
450
---- correct output:
3
---- user output:
100
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
